<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mymemolist20.MemoActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorBar">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/textViewTitle"
            android:textSize="24sp"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/textViewTitle"
            android:layout_toStartOf="@id/buttonSave"
            android:layout_marginEnd="5dp"
            android:inputType="textCapWords"
            android:scrollHorizontally="false"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/textViewImportance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:text="@string/textViewImportance"
            android:textSize="18sp"
            android:textColor="#fff"/>

        <RadioGroup
            android:id="@+id/radioGroupImportance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextTitle"
            android:layout_toEndOf="@id/textViewImportance"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/radioButtonLow"
                android:textColor="#fff"/>

            <RadioButton
                android:id="@+id/radioButtonMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/radioButtonMedium"
                android:textColor="#fff"/>

            <RadioButton
                android:id="@+id/radioButtonHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonHigh"
                android:textColor="#fff"/>

        </RadioGroup>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/buttonSave" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/navbar"
        android:layout_below="@+id/toolbar">

        <EditText
            android:id="@+id/editTextMemo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="top|start"
            android:inputType="textCapSentences|textMultiLine"
            android:scrollHorizontally="false"
            tools:ignore="Autofill,LabelFor" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="90dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/list"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="90dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/settings"
            tools:ignore="ContentDescription" />

    </RelativeLayout>


</RelativeLayout>